--- a/index.html
+++ b/index.html
@@ -29,6 +29,11 @@
   <!-- Latin Modern font (LaTeX default font) -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/bitmaks/cm-web-fonts@latest/fonts.css">
   <title>Fanyi Pu | Personal Page</title>
+  <script>
+    (function(){var t=localStorage.getItem('theme');
+    if(t==='dark'||(!t&&matchMedia('(prefers-color-scheme:dark)').matches))
+    document.documentElement.setAttribute('data-theme','dark')})();
+  </script>
 </head>
 
 <body>
