feat: add Charter and Space Grotesk fonts for improved typography and styling

--- a/src/index.html
+++ b/src/index.html
@@ -26,9 +26,9 @@
     content="Fanyi Pu - NTU DSAI Student, Research on Multimodal Models and Spatial Intelligence" />
   <meta property="twitter:image" content="https://pufanyi.com/me.webp" />
 
-  <link rel="preconnect" href="https://cdn.jsdelivr.net">
-  <!-- Latin Modern font (LaTeX default font) -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/bitmaks/cm-web-fonts@latest/fonts.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;500;600;700&display=swap">
   <title>Fanyi Pu | Personal Page</title>
   <script>
     (function(){var t=localStorage.getItem('theme');
