Update image formats in header and meta tags to use AVIF

--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
   <meta property="og:title" content="Fanyi Pu | Personal Page" />
   <meta property="og:description"
     content="Fanyi Pu - NTU DSAI Student, Research on Multimodal Models and Spatial Intelligence" />
-  <meta property="og:image" content="https://pufanyi.com/me.webp" />
+  <meta property="og:image" content="https://pufanyi.com/me.avif" />
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image" />
@@ -24,7 +24,7 @@
   <meta property="twitter:title" content="Fanyi Pu | Personal Page" />
   <meta property="twitter:description"
     content="Fanyi Pu - NTU DSAI Student, Research on Multimodal Models and Spatial Intelligence" />
-  <meta property="twitter:image" content="https://pufanyi.com/me.webp" />
+  <meta property="twitter:image" content="https://pufanyi.com/me.avif" />
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
